state/cavern/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sonarr
  name: sonarr
  namespace: cavern
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: sonarr
        image: linuxserver/sonarr:preview
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8989
          protocol: TCP
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: http
        # readinessProbe:
        #   failureThreshold: 3
        #   httpGet:
        #     path: /
        #     port: http
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2Gi
        volumeMounts:
        - mountPath: /opt/valorl/refresh-jellyfin.sh
          name: jellyfin-script
          subPath: refresh-jellyfin.sh
        - mountPath: /config
          name: config
        - mountPath: /mnt/media
          name: media
      # - name: exportarr
      #   image: onedr0p/exportarr:v0.3.4
      #   command: ["exportarr"]
      #   args: ["sonarr"]
      #   env:
      #   - name: PORT
      #     value: "9707"
      #   - name: URL
      #     value: http://localhost:8989
      #   - name: APIKEY
      #     valueFrom:
      #       secretKeyRef:
      #         name: apikeys
      #         key: sonarr
      #   - name: ENABLE_EPISODE_QUALITY_METRICS
      #     value: "true"
      #   ports:
      #   - name: monitoring
      #     containerPort: 9707
      #   livenessProbe:
      #     httpGet:
      #       path: /healthz
      #       port: monitoring
      #     failureThreshold: 5
      #     periodSeconds: 10
      #   readinessProbe:
      #     httpGet:
      #       path: /healthz
      #       port: monitoring
      #     failureThreshold: 5
      #     periodSeconds: 10
      #   resources:
      #     requests:
      #       cpu: 100m
      #       memory: 64Mi
      #     limits:
      #       cpu: 500m
      #       memory: 256Mi
      volumes:
      - name: jellyfin-script
        configMap:
          name: sonarr-jellyfin-script
          defaultMode: 0777
      - name: config
        hostPath:
          path: /data/sonarr
      - name: media
        persistentVolumeClaim:
          claimName: media
