state/cavern/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: cavern
  labels:
    app.kubernetes.io/name: sonarr
spec:
  ports:
    - name: http
      targetPort: http
      port: 8989
      protocol: TCP
    # - name: monitoring
    #   targetPort: monitoring
    #   port: 9707
  selector:
    app.kubernetes.io/name: sonarr
